add wallet balancing
